--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UAF CGPA Calculator</title>
+    
+    <title>UAF CGPA Calculator - M Saqlain | Automatic & Accurate</title>
+    <meta name="description" content="The Best UAF CGPA Calculator. Automatically fetches results from UAF LMS & Attendance System to calculate your exact CGPA and percentage." />
+    <meta name="application-name" content="UAF CGPA Calculator (M Saqlain)"/>
+    <meta name="keywords" content="UAF CGPA Calculator, uaf cgpa calculator, cgpa calculator uaf, uaf gpa calculator, university of agriculture faisalabad cgpa calculator, uaf lms cgpa calculator, uaf cgpa calculator saqlain, uaf result calculator, uaf cgpa calculator by registration number, calculate uaf cgpa" />
+    <meta name="author" content="Muhammad Saqlain - developer UAF CGPA Calculator" />
+    <meta name="theme-color" content="#22c55e" />
+
+    <meta itemprop="name" content="UAF CGPA Calculator - M Saqlain" />
+    <meta itemprop="description" content="Calculate your UAF CGPA instantly with 100% accuracy. Fetches data directly from LMS." />
+    <meta name="google-site-verification" content="google3e44586abf077c1e" />
+    <meta name="google-site-verification" content="zClcBWKWCeJyEGq-plDV2JvodudE4m_t8OK4sBMj8aw" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="UAF CGPA Calculator - Automatic & Accurate" />
+    <meta property="og:description" content="Calculate your UAF CGPA instantly. Supports BS, MSc, and B.Ed logic." />
+    <meta property="og:site_name" content="UAF CGPA Calculator" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-slate-50 text-slate-900 font-sans antialiased selection:bg-brand-500 selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
